# simple-touch-gestures-win

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gestures.hpp  touch_gestures.cpp  touch_gestures.hpp
